--- a/manifests/cluster-setup/vllm-runtime.yaml
+++ b/manifests/cluster-setup/vllm-runtime.yaml
@@ -6,6 +6,7 @@ metadata:
   annotations:
     openshift.io/display-name: vLLM
   name: vllm
+  namespace: demo
 spec:
   builtInAdapter:
     modelLoadingTimeoutMillis: 90000
