--- a/manifests/cluster-setup/model-storage-pvc.yaml
+++ b/manifests/cluster-setup/model-storage-pvc.yaml
@@ -1,11 +1,11 @@
+apiVersion: v1
+kind: PersistentVolumeClaim
 metadata:
-  name: model-storage
-  namespace: demo
+  name: vllm-models-cache
 spec:
   accessModes:
     - ReadWriteOnce
+  volumeMode: Filesystem
   resources:
     requests:
       storage: 100Gi
-  storageClassName: gp3-csi
-  volumeMode: Filesystem
