Fix serving container name

--- a/manifests/cluster-setup/vllm-runtime.yaml
+++ b/manifests/cluster-setup/vllm-runtime.yaml
@@ -28,7 +28,7 @@ spec:
         successThreshold: 1
         failureThreshold: 3
       terminationMessagePath: /dev/termination-log
-      name: server
+      name: kserve-container
       livenessProbe:
         httpGet:
           path: /health
