Fix MODEL_NAME env in container args

--- a/manifests/cluster-setup/vllm-runtime.yaml
+++ b/manifests/cluster-setup/vllm-runtime.yaml
@@ -43,7 +43,7 @@ spec:
           value: ''
       args: [
         "--model",
-        "$MODEL_NAME",
+        "$(MODEL_NAME)",
         "--download-dir",
         "/models-cache",
         "--dtype", "float16",
