Switch download dir to the path mounted by kserve

--- a/manifests/cluster-setup/vllm-runtime.yaml
+++ b/manifests/cluster-setup/vllm-runtime.yaml
@@ -45,7 +45,7 @@ spec:
         "--model",
         "$(MODEL_NAME)",
         "--download-dir",
-        "/models-cache",
+        "/mnt/models/",
         "--dtype", "float16",
         "--max-model-len", "6144" ]
       securityContext:
