Fix namespace on merlinite runtime

--- a/manifests/application/merlinite-runtime.yaml
+++ b/manifests/application/merlinite-runtime.yaml
@@ -8,7 +8,7 @@ metadata:
     opendatahub.io/template-name: vllm
     openshift.io/display-name: merlinite-7b-lab
   name: merlinite-7b-lab
-  namespace: vllm
+  namespace: demo
   labels:
     opendatahub.io/dashboard: 'true'
 spec:
