Avoid clash on route names for app and model

--- a/manifests/application/model-isvc.yaml
+++ b/manifests/application/model-isvc.yaml
@@ -6,7 +6,7 @@ metadata:
     serving.knative.openshift.io/enablePassthrough: 'true'
     sidecar.istio.io/inject: 'true'
     sidecar.istio.io/rewriteAppHTTPProbers: 'true'
-  name: llm-chat
+  name: llm-chat-model
   labels:
     opendatahub.io/dashboard: 'true'
 spec:
